# translate-subs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_adapter_errors.py  test_analysis.py  test_api_adapters.py  test_commands.py  test_complex_ass.py  test_ffmpeg_integration.py  test_memory.py  test_phase6.py  test_properties.py  test_readability.py  test_review.py  test_robustness.py  test_round_trip.py  test_source_resolver.py  test_stale_context.py
translate_subs/: __init__.py  cli.py  config.py  diagnostics.py  fsutil.py  naming.py  pipeline.py  settings.py
translate_subs/ai/: analysis.py  api_adapters.py  blocks.py  checkpoint.py  claude_cli.py  cli_adapters.py  job_protocol.py  provider.py
translate_subs/commands/: __init__.py  project.py  quality.py  system.py  translation.py
translate_subs/domain/: models.py
translate_subs/io/: media_probe.py  source_resolver.py  track_extractor.py
translate_subs/memory/: __init__.py  compact.py  merge.py  models.py  rules.py  store.py
translate_subs/readability/: __init__.py  compactor.py  metrics.py  report.py
translate_subs/review/: __init__.py  checks.py  models.py  report.py  reviewer.py  structure.py
translate_subs/subs/: document.py  extractor.py  reinserter.py  validator.py
translate_subs/workflows/: __init__.py  memory.py  models.py  output_manifest.py  quality.py  support.py  translation.py
