[project]
name = "translate-subs"
version = "0.2.4"
description = "Contextual subtitle translator (any language to any language) that preserves timing and ASS structure, driven by LLM agent CLIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
license-files = ["LICENSE"]
authors = [{ name = "Claudio Lepín Mena", email = "azratul@gmail.com" }]
keywords = ["subtitles", "translation", "anime", "ass", "srt", "llm", "ffmpeg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Environment :: Console",
]
dependencies = [
    # Floors track the versions the suite is actually run against. typer < 0.15.4 breaks with
    # Click >= 8.2 (e.g. `--help` raises on a clean install with Click 8.4.x); 0.15.4 is the first
    # release that works against it. The pysubs2 floor stays at the tested line.
    "pysubs2>=1.8",
    "typer>=0.15.4",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.optional-dependencies]
# Only needed for `--provider litellm`; Ollama uses the stdlib HTTP client.
litellm = ["litellm>=1.40"]

[project.urls]
Homepage = "https://github.com/azratul/translate-subs"
Repository = "https://github.com/azratul/translate-subs"
Issues = "https://github.com/azratul/translate-subs/issues"

[project.scripts]
translate-subs = "translate_subs.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["translate_subs"]

[tool.hatch.build.targets.sdist]
# Ship source and project docs; never the multi-TB media fixtures or the data sandbox.
include = [
    "translate_subs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "SECURITY.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer relies on function-call defaults (Argument/Option), and the CLI deliberately
# raises typer.Exit after printing a friendly message (no exception chaining wanted).
"translate_subs/cli.py" = ["B008", "B904"]
"translate_subs/commands/*.py" = ["B008", "B904"]
# The fixture embeds a real .ass file whose Style/Format header lines are inherently long.
"tests/test_complex_ass.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true       # pysubs2/litellm ship no type stubs
warn_unused_ignores = true
exclude = ["tests/"]
